ADD_SUBDIRECTORY(01)
ADD_SUBDIRECTORY(02)
ADD_SUBDIRECTORY(03)
ADD_SUBDIRECTORY(04)
ADD_SUBDIRECTORY(05)
ADD_SUBDIRECTORY(06)
ADD_SUBDIRECTORY(07)
ADD_SUBDIRECTORY(08)
ADD_SUBDIRECTORY(09)
ADD_SUBDIRECTORY(10)
ADD_SUBDIRECTORY(11)
ADD_SUBDIRECTORY(12)

SET(SOURCE_FILES my_ls.c)

ADD_EXECUTABLE(project_6 ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(project_6 common)